example 섹션의 down-wrapper 마크업, css

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
             <div class="tab-content-box">
               <div class="tab-content-wrapper">
                 <div class="tab-box active" id="tab-1">
-                  <div>
+                  <div class="float-left">
                     <div class="icon-title-phrase">
                       <img
                         src="./img/audiobook-yellow-bg.png"
@@ -767,9 +767,24 @@
                       <p>오디오북</p>
                       <p>세상에서 가장 <br />교양있는 수면제</p>
                     </div>
+                    <div class="down-wrapper">
+                      <div class="detail-phrase">
+                        <strong class="detail-phrase-first">dfad</strong>
+                        <p class="detail-phrase-second">asd</p>
+                      </div>
+                      <ul class="click-num">
+                        <li class="one active">1</li>
+                        <li class="two">2</li>
+                        <li class="three">3</li>
+                        <li class="four">4</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="float-right">
+                    <div class="smart-phone"></div>
                   </div>
                 </div>
-                <div class="tab-box" id="tab-2" style="border: 1px solid red">
+                <div class="tab-box" id="tab-2">
                   <div>
                     <div class="icon-title-phrase">
                       <img
