--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                   </div>
                 </div>
                 <div class="tab-box" id="tab-2">
-                  <div>
+                  <div class="float-left">
                     <div class="icon-title-phrase">
                       <img
                         src="./img/viewer-yellow-bg.png"
@@ -825,6 +825,53 @@
                       />
                       <p>밀리 뷰어</p>
                       <p>독서를 위한 가장 <br />완벽한 도구</p>
+                    </div>
+                    <div class="down-wrapper">
+                      <div class="detail-phrase viewer-phrase">
+                        <strong class="detail-phrase-first"></strong>
+                        <p class="detail-phrase-second"></p>
+                      </div>
+                      <ul class="click-num">
+                        <li class="one active" data-img="./img/밀리뷰어-1.gif">
+                          1
+                        </li>
+                        <li class="two" data-img="./img/밀리뷰어-2.png">2</li>
+                        <li class="three" data-img="./img/밀리뷰어-3.gif">3</li>
+                        <li class="four" data-img="./img/밀리뷰어-4.gif">4</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="float-right">
+                    <div class="smart-phone">
+                      <div class="smart-phone-inner">
+                        <img
+                          class="phone-image"
+                          src="./img/phone.png"
+                          alt="smartphone"
+                        />
+                        <div class="images-container">
+                          <img
+                            id="image1"
+                            src="./img/밀리뷰어-1.gif"
+                            alt="밀리뷰어 1"
+                          />
+                          <img
+                            id="image2"
+                            src="./img/밀리뷰어-2.png"
+                            alt="밀리뷰어 2"
+                          />
+                          <img
+                            id="image3"
+                            src="./img/밀리뷰어-3.gif"
+                            alt="밀리뷰어 3"
+                          />
+                          <img
+                            id="image4"
+                            src="./img/밀리뷰어-4.gif"
+                            alt="밀리뷰어 4"
+                          />
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
