--- a/index.html
+++ b/index.html
@@ -950,6 +950,66 @@
             </div>
           </div>
         </section>
+        <!-- qa section -->
+        <section class="qa">
+          <div class="qa-content-wrapper">
+            <div class="qa-content">
+              <p>자주 묻는 질문</p>
+              <ul class="accordion">
+                <li class="accordion-item">
+                  <div class="accordion-title">안쓰면 정말 환불해 주나요?</div>
+                  <div class="accordion-content">
+                    물론입니다. 결제 후 콘텐츠 다운로드 및 열람을 하지
+                    않으셨다면 전액 환불해 드리고 있어요. <br /><strong
+                      >[밀리 > 관리 > 구독관리 > 결제 내역 확인] </strong
+                    >에서 직접 환불이 가능하며,<br />해결이 어려운 경우
+                    고객센터로 문의해 주세요.
+                  </div>
+                </li>
+                <li class="accordion-item">
+                  <div class="accordion-title">
+                    구독 중 해지 할 수 있나요? 수수료는 없나요?
+                  </div>
+                  <div class="accordion-content">
+                    다음달 부터 결제되지 않도록 수수료 없이 언제든지 해지하실 수
+                    있습니다. <br /><strong
+                      >[밀리 > 관리 > 구독관리 > 자동결제 해지]</strong
+                    >
+                    메뉴를 통해 기간에 상관없이 직접 가능해요.
+                  </div>
+                </li>
+                <li class="accordion-item">
+                  <div class="accordion-title">
+                    무료 혜택은 누구나 받을 수 있나요?
+                  </div>
+                  <div class="accordion-content">
+                    네, 밀리 회원이라면 누구나 첫 정기구독 신청 시 1회
+                    제공됩니다.
+                    <br />
+                    첫 달 무료 또는 첫 주 무료 중 선택이 가능하며 무료 기간에
+                    따라 가격이 달라집니다. <br />
+                    종이책+전자책 정기구독의 경우 첫 주 무료 혜택만 제공됩니다.
+                    <br />
+                    아직 신청하지 않으셨다면 바로 구독신청으로 혜택을 받아
+                    보세요.
+                  </div>
+                </li>
+                <li class="accordion-item">
+                  <div class="accordion-title">
+                    어떤 기기에서 사용할 수 있나요?
+                  </div>
+                  <div class="accordion-content">
+                    아래 기기와 버전에서 밀리를 사용할 수 있습니다. <br />
+                    <br />- 휴대폰 / 태블릿 : iOS13, Android 6 이상 지원 <br />-
+                    PC : Mac Yosemite, Window 10 이상 지원 <br />- E ink :
+                    Android 4.4 이상 지원 <br />(크레마 그랑데, 크레마 카르타G,
+                    이노스페이스원 공식 판매 기기, 교보 Sam 7.8 등)
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </main>
       <!-- Footer -->
       <footer></footer>
