--- a/index.html
+++ b/index.html
@@ -1054,6 +1054,10 @@
           </div>
         </div>
       </footer>
+      <!-- fixed start button -->
+      <button class="fixed-start-button">
+        <strong>첫 달 무료</strong>로 독서 시작하기
+      </button>
     </div>
     <script>
       AOS.init();
