header 로고 변경, 광고 재생 버튼만 cursor: pointer 처리

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <!-- Header -->
       <header>
-        <img src="img/millie-logo.png" alt="밀리의서재 로고" />
+        <img src="img/simple-logo.png" alt="밀리의서재 로고" />
         <nav>
           <ul>
             <li><a href="#none">기업문의</a></li>
