반응형 수정, example 섹션 media768이하일 때 container 가로 너비 if문으로 수정

--- a/index.html
+++ b/index.html
@@ -1161,10 +1161,20 @@
       /* ----- 스마트폰 이미지 슬라이드 효과 ----- */
       const clickNums = $(".click-num li");
       const container = $(".images-container");
-      let containerWidth = container.width() / 4;
+      let containerWidth;
+
+      function updateContainerWidth() {
+        if ($(window).width() <= 768) {
+          containerWidth = container.width();
+        } else {
+          containerWidth = container.width() / 4;
+        }
+      }
+
+      updateContainerWidth();
 
       $(window).on("resize", () => {
-        containerWidth = container.width() / 4;
+        updateContainerWidth();
       });
 
       clickNums.on("click", (event) => {
