반응형 수정, 헤더와 fixed 버튼 고정 문제 해결

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- Header -->
       <header>
         <a class="logo-click-to-top" href="#">
-          <img src="img/simple-logo.png" alt="밀리의서재 로고" />
+          <img src="img/millie-logo.png" alt="밀리의서재 로고" />
         </a>
         <nav>
           <ul>
@@ -670,12 +670,14 @@
             <div class="how-read">
               <div class="how-read-first-wrapper">
                 <img
+                  class="mania"
                   data-aos="zoom-in-up"
                   data-aos-duration="800"
                   src="./img/마니아.png"
                   alt="마니아 카드"
                 />
                 <img
+                  class="millie-pick"
                   data-aos="zoom-in-up"
                   data-aos-duration="1300"
                   src="./img/밀리픽.png"
@@ -684,12 +686,14 @@
               </div>
               <div class="how-read-second-wrapper">
                 <img
+                  class="holic"
                   data-aos="zoom-in-up"
                   data-aos-duration="500"
                   src="./img/홀릭.png"
                   alt="홀릭 카드"
                 />
                 <img
+                  class="hidden"
                   data-aos="zoom-in-up"
                   data-aos-duration="1600"
                   src="./img/히든.png"
