--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <li><a href="#none">기업문의</a></li>
             <li><a href="#none">회사소개</a></li>
             <li><a href="#none">계정관리</a></li>
-            <li class="login"><a href="#none">로그인</a></li>
           </ul>
+          <button class="login" type="button" onclick="location.href='#none';">로그인</button>
         </nav>
       </header>
       <!-- Main -->
@@ -1100,6 +1100,6 @@
     </div>
     <script>
       AOS.init();
-    </script>
+    </script>    
   </body>
 </html>
