--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@
           <div class="my-sub-story">
             <div class="yellow-bg">
               <div class="ad-and-phrase-wrapper">
-                <article class="video-container-2 story-left">
+                <article
+                 class="video-container-2 story-left">
                   <h3 class="sr-only">밀리의 서재 광고 영상-2</h3>
                   <iframe
                     class="video-2"
