성능 최적화를 위한 gif를 video로 수정

--- a/index.html
+++ b/index.html
@@ -854,11 +854,9 @@
                             src="./img/오디오북-1.png"
                             alt="오디오북 1"
                           >
-                          <img
-                            id="image2"
-                            src="./img/오디오북-2.gif"
-                            alt="오디오북 2"
-                          >
+                          <video id="image2" autoplay loop>
+                            <source src="./img/오디오북-2.mp4" type="video/mp4">
+                          </video>
                           <img
                             id="image3"
                             src="./img/오디오북-3.png"
@@ -914,26 +912,20 @@
                           alt="smartphone"
                         >
                         <div class="images-container">
-                          <img
-                            id="image11"
-                            src="./img/밀리뷰어-1.gif"
-                            alt="밀리뷰어 1"
-                          >
+                          <video id="image11" autoplay loop>
+                            <source src="./img/밀리뷰어-1.mp4" type="video/mp4">
+                          </video>
                           <img
                             id="image22"
                             src="./img/밀리뷰어-2.png"
                             alt="밀리뷰어 2"
                           >
-                          <img
-                            id="image33"
-                            src="./img/밀리뷰어-3.gif"
-                            alt="밀리뷰어 3"
-                          >
-                          <img
-                            id="image44"
-                            src="./img/밀리뷰어-4.gif"
-                            alt="밀리뷰어 4"
-                          >
+                          <video id="image33" autoplay loop>
+                            <source src="./img/밀리뷰어-3.mp4" type="video/mp4">
+                          </video>
+                          <video id="image44" autoplay loop>
+                            <source src="./img/밀리뷰어-4.mp4" type="video/mp4">
+                          </video>
                         </div>
                       </div>
                     </div>
