--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                             src="./img/오디오북-1.png"
                             alt="오디오북 1"
                           >
-                          <video id="image2" autoplay loop>
+                          <video id="image2" autoplay loop muted>
                             <source src="./img/오디오북-2.mp4" type="video/mp4">
                           </video>
                           <img
@@ -912,7 +912,7 @@
                           alt="smartphone"
                         >
                         <div class="images-container">
-                          <video id="image11" autoplay loop>
+                          <video id="image11" autoplay loop muted>
                             <source src="./img/밀리뷰어-1.mp4" type="video/mp4">
                           </video>
                           <img
@@ -920,10 +920,10 @@
                             src="./img/밀리뷰어-2.png"
                             alt="밀리뷰어 2"
                           >
-                          <video id="image33" autoplay loop>
+                          <video id="image33" autoplay loop muted>
                             <source src="./img/밀리뷰어-3.mp4" type="video/mp4">
                           </video>
-                          <video id="image44" autoplay loop>
+                          <video id="image44" autoplay loop muted>
                             <source src="./img/밀리뷰어-4.mp4" type="video/mp4">
                           </video>
                         </div>
