--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" >
     <title>브랜드 | 밀리의 서재</title>
     <!-- Favicon -->
     <link rel="icon" href="./favicon.ico" type="image/x-icon" >
@@ -941,8 +942,7 @@
           <div class="my-sub-story">
             <div class="yellow-bg">
               <div class="ad-and-phrase-wrapper">
-                <article
-                 class="video-container-2 story-left">
+                <article class="video-container-2 story-left">
                   <h3 class="sr-only">밀리의 서재 광고 영상-2</h3>
                   <iframe
                     class="video-2"
