성능 최적화[preload를 사용하여 렌더링 방해하는 css 연기하기]

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <!-- AOS.js CDN -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" >
+    <!-- Preload CSS files -->
+    <link rel="preload" href="css/font.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/custom.reset.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="css/responsive.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <!-- Custom CSS and JS -->
     <link rel="stylesheet" href="css/font.css" type="text/css" >
     <link rel="stylesheet" href="css/custom.reset.css" type="text/css" >
